fix(Homepage): resolve image hover issue caused by overlapping hero-text element

--- a/CSSFiles/HP.css
+++ b/CSSFiles/HP.css
@@ -248,6 +248,8 @@ main h2 {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 100;
 }
 
 .main-content {
@@ -309,6 +311,7 @@ main h2 {
   border-radius: 20px;
   cursor: pointer;
   transition: transform 0.3s ease;
+  z-index: 300;
 }
 .main-image:hover {
   animation: pop 0.4s ease;
@@ -389,7 +392,7 @@ main h2 {
   top: 50%;
   left: 0px;          
   transform: translateY(-50%);  
-  z-index: 200;
+  z-index: 10;
   color: #d04a7c;
   text-align: left;
 }
